--- a/FCOApplication_Back/app/src/main/res/layout/activity_main.xml
+++ b/FCOApplication_Back/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
        />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:text="@string/button_blue"
         android:onClick="nextPage" />
 
