--- a/FCOApplication_Back/app/src/main/res/layout/fragment_article.xml
+++ b/FCOApplication_Back/app/src/main/res/layout/fragment_article.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+   android:theme="@style/ThemeFCO"
+    android:background="@color/colorWhite"
     tools:context="com.example.fhcoulibaly.fcoapplication_back.ArticleFragment">
 
     <!-- TODO: Update blank fragment layout -->
